[gd_scene load_steps=6 format=3 uid="uid://dcduejnqy0gx"]

[ext_resource type="Script" uid="uid://r4rybqnaac2k" path="res://src/ui/blow_calibration_screen.gd" id="1_x2w1b"]
[ext_resource type="Script" uid="uid://bpc7dvcqlnfon" path="res://scaffolder/src/ui/screens/screen.gd" id="2_wla3f"]
[ext_resource type="PackedScene" uid="uid://cncbapiuueajh" path="res://scaffolder/src/ui/widgets/header.tscn" id="3_5dhkw"]
[ext_resource type="FontFile" uid="uid://mxq5eqdy10l0" path="res://assets/fonts/Roboto/Roboto-Italic.ttf" id="4_2mmsp"]
[ext_resource type="PackedScene" uid="uid://dcisa6xson4x6" path="res://scaffolder/src/ui/widgets/click_button.tscn" id="5_2mmsp"]

[node name="BlowCalibrationScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2w1b")
metadata/_custom_type_script = ExtResource("2_wla3f")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" parent="CenterContainer/VBoxContainer" instance=ExtResource("3_5dhkw")]
unique_name_in_owner = true
layout_mode = 2
text = "Blow"

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Instructions" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "While blowing moderately into your microphone, press the button."
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DeviceLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_2mmsp")
text = "(Using %s)"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Magnitude:  "

[node name="Magnitude" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.63, 0.63, 0.63, 1)
text = "0.00000"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ClickButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("5_2mmsp")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "I'm blowing"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ClickButton" to="." method="_on_click_button_pressed"]
